--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -7018,6 +7018,7 @@ body.rtls .top-navigation .footer.fixed, body.rtls.top-navigation .footer.fixed 
 	width: 100%;
 	padding: 15px;
 	overflow: hidden;
+    min-height: 75px;
 }
 
 .sidebar-collapse .user-panel .image>img {
