--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="renderer" content="webkit">
-    <title>系统首页</title>
+    <title>King</title>
     <!--[if lt IE 9]>
     <meta http-equiv="refresh" content="0;ie.html"/>
     <![endif]-->
@@ -35,7 +35,7 @@
             			<a class="menuItem" title="个人中心" th:href="@{/system/user/profile}"> 
             				<div class="hide" th:text="个人中心"></div>
 					        <div class="pull-left image">
-		                    	<img th:src="(${user.avatar} == '') ? @{/img/profile.png} : @{/profile/avatar/} + ${user.avatar}" class="img-circle" alt="User Image">
+		                    	<img th:src="(${user.avatar} == '') ? @{/img/profile.png} : @{/profile/avatar/} + ${user.avatar}" th:onerror="'javascript:this.src=\'' + @{/img/profile.png} + '\''" class="img-circle" alt="User Image">
 					        </div>
 				        </a>
 				        <div class="pull-left info">
@@ -173,7 +173,7 @@
 	                <li><a title="全屏显示" href="javascript:void(0)" id="fullScreen"><i class="fa fa-arrows-alt"></i> 全屏显示</a></li>
                     <li class="dropdown user-menu">
 						<a href="javascript:void(0)" class="dropdown-toggle" data-hover="dropdown">
-							<img th:src="(${user.avatar} == '') ? @{/img/profile.png} : @{/profile/avatar/} + ${user.avatar}" class="user-image">
+							<img th:src="(${user.avatar} == '') ? @{/img/profile.png} : @{/profile/avatar/} + ${user.avatar}" th:onerror="'javascript:this.src=\'' + @{/img/profile.png} + '\''" class="user-image">
 							<span class="hidden-xs">[[${user.userName}]]</span>
 						</a>
 						<ul class="dropdown-menu">
@@ -220,7 +220,8 @@
             <div class="pull-left">
                 <iframe allowtransparency="true" frameborder="0"
                         scrolling="no"
-                        src="//tianqi.eastday.com/plugin/widget_v1.html?sc=3&amp;z=1&amp;t=1&amp;v=0&amp;d=1&amp;bd=0&amp;k=&amp;f=&amp;q=1&amp;a=1&amp;c=54511&amp;w=317&amp;h=28&amp;align=center"></iframe>
+						src="https://i.tianqi.com/?c=code&a=getcode&id=34&h=25&w=280"></iframe>
+                        <!--src="//tianqi.eastday.com/plugin/widget_v1.html?sc=3&amp;z=1&amp;t=1&amp;v=0&amp;d=1&amp;bd=0&amp;k=&amp;f=&amp;q=1&amp;a=1&amp;c=54511&amp;w=317&amp;h=28&amp;align=center"></iframe>-->
             </div>
             <div class="pull-right"><h5>Copyright © [[${copyRightYear}]] King All rights reserved</h5></div>
         </div>
