--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-    <title>登录King系统</title>
+    <title>欢迎使用后台管理系统</title>
     <meta name="description" content="King后台管理框架">
     <link href="../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
     <link href="../static/css/font-awesome.min.css" th:href="@{/css/font-awesome.min.css}" rel="stylesheet"/>
@@ -46,6 +46,22 @@
         .refreshIcon {
             top:-38px;
         }
+        .middle-box-form-box{
+            padding: 100px 0;
+        }
+        .middle-box-form-box .middle-box-form-title{
+            font-size: 23px;
+            color: #f1f1f1;
+            align-items: center;
+            padding-bottom: 50px;
+            font-family: 新宋体;
+        }
+        .m-t .form-group{
+            padding: 5px 0;
+        }
+        .m-t .form-group .form-group-input{
+            font-size: 18px;
+        }
     </style>
     <script>
         if(window.top!==window.self){window.top.location=window.location};
@@ -53,17 +69,15 @@
 </head>
 <body class="signin">
 <div class="middle-box text-center loginscreen  animated fadeInDown" id="loginapp">
-    <div>
-        <div>
-            <h1 class="logo-name">1.0</h1>
-        </div>
-        <h3>欢迎使用King</h3>
+    <div class="middle-box-form-box">
+       <!-- <div><h1 class="logo-name">1.0</h1></div>-->
+        <div class="middle-box-form-title">欢迎使用后台管理系统</div>
         <form id="signupForm" class="m-t" role="form">
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="用户名" name="username" required="" value="crown"/>
+                <input type="text" class="form-control form-group-input" placeholder="用户名" name="username" required="" value="crown"/>
             </div>
             <div class="form-group">
-                <input type="password" class="form-control" placeholder="密码" name="password" required="" value="crown"/>
+                <input type="password" class="form-control form-group-input" placeholder="密码" name="password" required="" value="crown"/>
             </div>
 
             <div class="slidercaptcha card row m-t">
@@ -78,9 +92,9 @@
         </form>
     </div>
 
-    <div class="signup-footer">
-        <p><a href="javascript:;" target="_blank">© 2019 King版权所有</a></p>
-    </div>
+    <!--<div class="signup-footer">
+        <p><a href="javascript:;" target="_blank">© 2019 版权所有</a></p>
+    </div>-->
 </div>
 <script th:inline="javascript"> var ctx = [[@{/}]]; </script>
 <!-- 全局js -->
